<resources>
    <string name="app_name">Uphill</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_information">Information</string>
    <string name="title_search">Search</string>
    <string name="title_record">Record</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_dot">Dot</string>
    <string name="게시물">게시물</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="내정보">내정보</string>
    <string name="계정">계정</string>
    <string name="설정">설정</string>
    <string name="오름길">오름길</string>
    <string name="회원가입">회원가입</string>
    <string name="로그인">로그인</string>
    <string name="loading">Loading</string>
    <string name="plus">+</string>
    <string name="loginString">login</string>
    <string name="room_title">room_title</string>
    <string name="description">description</string>
    <string name="메인">오름길</string>
    <string name="대회">대회</string>
    <string name="기록">기록</string>
    <string name="크루">크루</string>
    <string name="홈">홈</string>
    <string name="crew_title">crew명</string>
    <string name="크루원">크루원</string>

</resources>