<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.uphill.ui.home.HomeFragment"
        android:label="@string/메인"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.uphill.ui.dashboard.DashboardFragment"
        android:label="@string/대회"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_record"
        android:name="com.example.uphill.ui.record.RecordFragment"
        android:label="@string/기록"
        tools:layout="@layout/fragment_record" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.uphill.ui.search.SearchFragment"
        android:label="@string/크루"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_information"
        android:name="com.example.uphill.ui.information.InformationFragment"
        android:label="@string/내정보"
        tools:layout="@layout/fragment_information" />
</navigation>