<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item
            android:id="@+id/navigation_crewMember"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/크루"
            android:fontFamily="@font/tmoneyroundwindextrabold"/>
        <item
            android:id="@+id/navigation_crewDashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/대회"
            android:fontFamily="@font/tmoneyroundwindextrabold"/>
        <item
            android:id="@+id/navigation_crewCompetition"
            android:icon="@drawable/ic_record_black_24dp"
            android:title="@string/기록"
            android:fontFamily="@font/tmoneyroundwindextrabold"/>
</menu>