<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crew_navigation"
    app:startDestination="@+id/navigation_crewMember">

    <fragment
        android:id="@+id/navigation_crewMember"
        android:name="com.example.uphill.ui.search.crew.member.CrewMemberFragment"
        android:label="@string/크루"
        tools:layout="@layout/fragment_crew_member" />
    <fragment
        android:id="@+id/navigation_crewCompetition"
        android:name="com.example.uphill.ui.search.crew.competition.CrewCompetitionFragment"
        android:label="@string/기록"
        tools:layout="@layout/fragment_crew_competition" />
    <fragment
        android:id="@+id/navigation_crewDashboard"
        android:name="com.example.uphill.ui.search.crew.dashboard.CrewDashboardFragment"
        android:label="@string/대회"
        tools:layout="@layout/fragment_crew_dashboard" />
</navigation>