<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.information.InformationFragment">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="113dp"
        android:layout_height="114dp"
        android:layout_marginStart="149dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="543dp"
        android:contentDescription="@string/내정보"
        android:src="@drawable/ic_information_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="512dp"
        android:fontFamily="@font/tmoneyroundwindextrabold"
        android:text="@string/내정보"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="267dp"
        android:layout_marginBottom="386dp"
        android:text="@string/계정"
        android:gravity="start"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="345dp"
        android:layout_marginBottom="308dp"
        android:text="@string/게시물"
        android:gravity="start"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="422dp"
        android:layout_marginBottom="231dp"
        android:text="@string/설정"
        android:gravity="start"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>